# capstone-gui

./: .gitignore  .qmlls.ini  CMakeLists.txt  README.md
CapstoneMainscreen/: CMakeLists.txt  CapstoneMainscreen.qmlproject  qmlmodules  translations.db-shm
CapstoneMainscreen/content/: App.qml  Mainscreen.ui.qml
CapstoneMainscreen/imports/: CMakeLists.txt
CapstoneMainscreen/imports/CapstoneMainscreen/: CMakeLists.txt  qmldir
CapstoneMainscreen/imports/CapstoneMainscreen/designer/: plugin.metainfo
CapstoneMainscreen/src/: import_qml_plugins.h
Test/: Test.qmlproject  Test.qmlproject.qtds  Test.qmlproject.qtds.5753b9b  Test.qmlrc  temp.qrc
Test/Test/: Constants.qml  qmldir
Test/Test/designer/: plugin.metainfo
Test/TestContent/: App.qml  FileLoaded.ui.qml  FileLoaded.ui.qml.autosave  Mainscreen.ui.qml  Mainscreen.ui.qml.autosave  Screen01.ui.qml.autosave  Simulation.ui.qml  Simulation.ui.qml.autosave
UntitledProject/: CMakeLists.txt  UntitledProject.qmlproject  UntitledProject.qmlproject.qtds  qds.cmake
UntitledProject/App/autogen/: environment.h
UntitledProject/Quick3DAssets/EUROPALETTE/: Europalette.qml  _importdata.json  qmldir
UntitledProject/Quick3DAssets/EUROPALETTE/meshes/: cube_002.mesh  cube_003.mesh  cube_004.mesh  cube_005.mesh  cube_006.mesh  cube_007.mesh  cube_011.mesh  cube_012.mesh
UntitledProject/Quick3DAssets/EUROPALETTE/source scene/: EUROPALETTE.fbx
UntitledProject/Quick3DAssets/Pallet/: Pallet.qml  _importdata.json  qmldir
UntitledProject/Quick3DAssets/Pallet/meshes/: plane_001.mesh
UntitledProject/UntitledProject/: CMakeLists.txt  Constants.qml  qmldir
UntitledProject/UntitledProjectContent/: App.qml  CMakeLists.txt  Screen01.ui.qml  Screen01.ui.qml.autosave
assets/models/asia/: AsiaPallet.qml
assets/models/asia/meshes/: asia_pallet.mesh  mesh.mesh
assets/models/box/: CartonBox.qml
assets/models/box/meshes/: carton_box.mesh
assets/models/eur/: EuroPallet.qml
assets/models/eur/meshes/: wood_pallet.mesh
assets/models/euro/: EuroPallet.qml
assets/models/euro/meshes/: mesh.mesh
assets/models/ind/: IndustrialPallet.qml
assets/models/industrial/: IndustrialPallet.qml
assets/models/industrial/meshes/: ind_pallet.mesh  mesh.mesh
data/: pallet.json
qml/: AddBoxesForSessionDialog.qml  FullScreen3DWindow.qml  Main.qml  Mainscreen.qml  PreviewWindow.qml  ThreeDView.qml
scripts/: pre-commit-hooks.sh
src/: 3d.cpp  3d.h  box.cpp  boxdata.cpp  boxdata.h  fullscreen3dwindow.cpp  fullscreen3dwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  networkhelper.cpp  networkhelper.h
tests/: .qmlls.ini  CMakeLists.txt  testassetsload.cpp
